Contrast fix on powered by text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -665,7 +665,7 @@ button[disabled] {
 }
 
 .formkit-form[data-uid="4bdb948d56"] .formkit-powered-by {
-    color: #7d7d7d;
+    color: #1f1f1f;
     display: block;
     font-size: 12px;
     margin: 10px 0 0 0;
